Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Git.vivihuang.GitHub.io : 小码农和和的博客">
+    <meta name="description" content="Git : 小码农和和的博客">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Git.vivihuang.GitHub.io</title>
+    <title>Git</title>
   </head>
 
   <body>
@@ -16,14 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/vivihuang/git.vivihuang.github.io">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/vivihuang/git">View on GitHub</a>
 
-          <h1 id="project_title">Git.vivihuang.GitHub.io</h1>
+          <h1 id="project_title">Git</h1>
           <h2 id="project_tagline">小码农和和的博客</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/vivihuang/git.vivihuang.github.io/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/vivihuang/git.vivihuang.github.io/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/vivihuang/git/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/vivihuang/git/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
@@ -418,7 +418,7 @@ Deleted branch dev (was fec145a).
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Git.vivihuang.GitHub.io maintained by <a href="https://github.com/vivihuang">vivihuang</a></p>
+        <p class="copyright">Git maintained by <a href="https://github.com/vivihuang">vivihuang</a></p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
